# VAD_NN_training_validation

./: ESC_upsample.py  NN_practise.ipynb  NN_practise_ipynb_.ipynb  NN_stracture.py  README.md  feature_emobase_studying.ipynb  feature_searching.ipynb  generate.py  main.py  main_sgram_downsampled.py  openSmile_featuring.py  opensmile_configs_study.ipynb  pyproject.toml
scripts_for_server/: nn_segmentation.py
scripts_for_server/nn_sound_tools/Architectures/: __init__.py  segmentation.py
scripts_for_server/nn_sound_tools/Datasets/: segmentation.py
